gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test15660.d
version https://git-lfs.github.com/spec/v1
oid sha256:7611995d5f6cc89118519eae407646d21c95ba361be1a2806749007be0dd2222
size 394
